<resources>
    <string name="app_name">School Management</string>
    <string name="new_app_name">School Management</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="my_profile">My Profile</string>
    <string name="attendance">Attendance</string>
    <string name="gallery">Gallery</string>
    <string name="todo1">TODO</string>
    <string name="student_leave">Student Leave</string>
    <string name="apply_leave">Apply Leave</string>
    <string name="circular">Circular</string>
    <string name="event">Event</string>
    <string name="homework">Homework</string>
    <string name="visitor_pass">Visitor Pass</string>
    <string name="visitor">Visitor</string>
    <string name="transport">Transport</string>
    <string name="message">Message</string>
    <string name="www">WWW</string>
    <string name="qr_code">QR Code</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="preference_file_name">Students Preference</string>
    <string name="students">Students</string>
</resources>