<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgheaderschool"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/new_school_logo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etmobilenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgheaderschool"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:hint="@string/mobile_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:maxLength="10"
        android:minLines="1" />

    <EditText
        android:id="@+id/etpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etmobilenumber"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:minHeight="48dp"
        android:padding="10dp" />


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etpw"
        android:layout_margin="20dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#546E7A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtforgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:padding="6dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnlogin"/>

    <TextView
        android:id="@+id/txtregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:padding="6dp"/>

</RelativeLayout>